--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     url: jdbc:sqlite:db.sqlite
@@ -11,3 +12,8 @@ spring:
 
     database-platform: org.hibernate.community.dialect.SQLiteDialect
     show-sql: true
+
+    defer-datasource-initialization: true
+  sql:
+    init:
+       mode: always
